[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/achievement_gallery.gd" id="1_script"]

[node name="AchievementGallery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="TopBar/HBox"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4
text = "BACK"

[node name="Title" type="Label" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "ACHIEVEMENTS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressLabel" type="Label" parent="TopBar/HBox"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "0/8"
horizontal_alignment = 2
vertical_alignment = 1

[node name="FilterBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 90.0
offset_right = -20.0
offset_bottom = 140.0
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1

[node name="AllButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "ALL"

[node name="BattleButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "BATTLE"

[node name="CollectionButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "COLLECTION"

[node name="ProgressionButton" type="Button" parent="FilterBar"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "PROGRESSION"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 150.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AchievementGrid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4
